<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Numaeel</string>
    <string name="shortcut_compose_short">Compose</string>
    <string name="shortcut_compose_long">Compose new email</string>
    <string name="shortcut_search_short">Search</string>
    <string name="shortcut_search_long">Search mail</string>
    <string name="shortcut_drafts_short">Drafts</string>
    <string name="shortcut_drafts_long">View drafts</string>
</resources>
