<?xml version="1.0" encoding="utf-8"?>
<!-- Decision #61: App Shortcuts from long-pressing the launcher icon. -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="compose"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_compose_short"
        android:shortcutLongLabel="@string/shortcut_compose_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ch.rhosys.email"
            android:targetClass="ch.rhosys.email.MainActivity"
            android:data="numaeel://compose" />
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ch.rhosys.email"
            android:targetClass="ch.rhosys.email.MainActivity"
            android:data="numaeel://search" />
    </shortcut>
    <shortcut
        android:shortcutId="drafts"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_drafts_short"
        android:shortcutLongLabel="@string/shortcut_drafts_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ch.rhosys.email"
            android:targetClass="ch.rhosys.email.MainActivity"
            android:data="numaeel://drafts" />
    </shortcut>
</shortcuts>
